[package]
name = "esr_tp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "node"
path = "src/node.rs"

[lib]
name = "esr_lib"
path = "src/lib.rs"


[dependencies]
bincode = "1.3.3"
clap = { version = "4.4.6", features = ["derive"] }
rand = "0.8.5"
rtp = "0.9.0"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
thiserror = "1.0.50"
