[package]
name = "esr_tp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "node"
path = "src/node.rs"

[[bin]]
name = "server"
path = "src/server_launcher.rs"

[[bin]]
name = "client"
path = "src/client_launcher.rs"

[[bin]]
name = "client_top"
path = "src/client_top_launcher.rs"

[lib]
name = "esr_lib"
path = "src/lib.rs"


[dependencies]
bincode = "1.3.3"
clap = { version = "4.4.6", features = ["derive"] }
gtk = { version = "0.7.3", package = "gtk4", features = ["v4_12"] }
rand = "0.8.5"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
thiserror = "1.0.50"
